--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@ function onFrame() {
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Blog</title>
 </head>
 <body>
     <nav id="navbar-example2" class="navbar navbar-light " style="background-color: rgb(219, 151, 143);">
